calico/allow-node2pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-to-pod
  namespace: jinsu
spec:
  podSelector: {} # 匹配命名空间中的所有 Pod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.16.20.0/24 # 允许172.16.20
    - ipBlock:
        cidr: 172.16.21.0/24 # 允许172.16.21
