calico/deny-pod-from-jinsu.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-pod-from-jinsu
  namespace: jinsu
spec:
  podSelector: {} # Selects all pods in the namespace
  policyTypes:
  - Ingress
  ingress:  # Empty ingress rules deny all incoming traffic
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0  # allow all ip
        except: 
        - podSelector: {}
